--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 		<canvas id="canvas" width="800" height="500"></canvas>
 	</div>
 	
+	<script type="text/javascript" src="js/mailBox.js"></script>
+	<script type="text/javascript" src="js/module.js"></script>
+	<script type="text/javascript" src="js/view.js"></script>
 	<script type="text/javascript" src="js/sprite.js"></script>
 	<script type="text/javascript" src="js/util.js"></script>
 	<script type="text/javascript" src="js/behavior.js"></script>
