完成基本动画、界面和事件处理系统
动画流畅稳定，fps为30以内（以节约内存）,基本事件处理系统封装完毕，经过测试，可以实现组件模块之间的简单通信，接下来实现逻辑部分。

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		#hit, #stand {
 			position: absolute;
-			top: 400px;
+			top: 500px;
 			right : 110px;
 			border:none;width:120px;height:120px;
 			z-index: 11;
@@ -56,6 +56,7 @@
 	<script type="text/javascript" src="js/mailBox.js"></script>
 	<script type="text/javascript" src="js/module.js"></script>
 	<script type="text/javascript" src="js/view.js"></script>
+	<script type="text/javascript" src="js/logic.js"></script>
 	<script type="text/javascript" src="js/sprite.js"></script>
 	<script type="text/javascript" src="js/util.js"></script>
 	<script type="text/javascript" src="js/behavior.js"></script>
