继续完成界面

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 
 		#hit, #stand {
 			position: absolute;
-			top: 500px;
+			top: 480px;
 			right : 110px;
 			border:none;width:120px;height:120px;
+			outline: none;
+			cursor: pointer;
 			z-index: 11;
 			background: url(srcs/hit.png) no-repeat;
 		}
