--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<script type="text/javascript" src="js/module.js"></script>
 	<script type="text/javascript" src="js/view.js"></script>
 	<script type="text/javascript" src="js/logic.js"></script>
-	<script type="text/javascript" src="js/sprite.js"></script>
+	<script type="text/javascript" src="js/graph.js"></script>
 	<script type="text/javascript" src="js/util.js"></script>
 	<script type="text/javascript" src="js/behavior.js"></script>
 	<script type="text/javascript" src="js/painter.js"></script>
