--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 			top: 200px;
 			left: 100px;
 
-			width: 120px;
-			height: 52px;
+			width: 120px;/*
+			height: 52px;*/
 			border: none;
 			outline: none;
 
