--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 		
 		#play {
 			position: absolute;
-			top: 200px;
-			left: 100px;
+			top: 470px;
+			left: 130px;
 
-			width: 120px;/*
-			height: 52px;*/
+			width: 120px;
+			height: 52px;
 			border: none;
 			outline: none;
 
@@ -69,7 +69,7 @@
 	<div id="wrapper">
 		<button id="hit"></button>
 		<button id="stand"></button>
-		<!-- <button id="play"></button> -->
+		<button id="play"></button>
 		<canvas id="canvas" width="800" height="500"></canvas>
 	</div>
 	
@@ -103,8 +103,8 @@
 		var stand = document.getElementById("stand");
 		addButtonAni(stand);
 
-		// var play = document.getElementById("play");
-		// addButtonAni(play);
+		var play = document.getElementById("play");
+		addButtonAni(play);
 
 	</script>
 </body>
