--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 			margin: 0px;
 		}
 		#wrapper {
-			position: relative;
-			margin: 0px auto;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			margin-top: -350px;
+			margin-left: -400px;
 			width: 800px;
 			height: 500px;
 		}
